# dimdimmuscu

./: .eslintrc.cjs  .gitignore  App.tsx  Cargo.toml  README.md  app.json  cargo.toml  dockerfile  package-lock.json  package.json
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: audit.yml  ci.yaml  deploy.yml  main.yml  tests.yml
__tests__/: Calculators1RMTest.tsx  WeightTrackerTest.tsx
assets/texts/: CalculatorTexts.tsx  Common.tsx  ExercisesListTexts.tsx  PersonalRecordTexts.tsx  (+2 more)
back/dimdimmuscuback/: Cargo.toml
back/dimdimmuscuback/migrations/: 00000_init_db.sql
back/dimdimmuscuback/src/: lib.rs  libs.rs  main.rs  test_helper.rs
back/dimdimmuscuback/src/cookies/: mod.rs
back/dimdimmuscuback/src/db/methods/: init_db.rs  queries.rs
back/dimdimmuscuback/src/db/structs/: auth_users.rs  db_infos.rs  lifts.rs  mod.rs  movements.rs  muscles.rs  session.rs  users.rs  users_auth.rs
back/dimdimmuscuback/src/env/: mod.rs
back/dimdimmuscuback/src/errors/: env.rs  login.rs
back/dimdimmuscuback/src/errors/auth/: login.rs  login_logoff.rs  mod.rs  session.rs  signup.rs
back/dimdimmuscuback/src/errors/cookies/: mod.rs
back/dimdimmuscuback/src/libs/: db.rs  env.rs  errors.rs  front.rs  routers.rs  secret.rs
back/dimdimmuscuback/src/libs/db/methods/: init_db.rs  queries.rs
back/dimdimmuscuback/src/libs/db/structs/: movements.rs  muscles.rs  session.rs  users.rs  users_auth.rs
back/dimdimmuscuback/src/libs/errors/auth/: session.rs  signup.rs
back/dimdimmuscuback/src/libs/front/: front_router.rs  landing_page.rs
back/dimdimmuscuback/src/libs/front/html/: landingpage.html  loginpage.html  signuppage.html
back/dimdimmuscuback/src/libs/mw/: mw_auth.rs
back/dimdimmuscuback/src/libs/routers/: auth.rs  connected.rs  fallback.rs  main_router.rs
back/dimdimmuscuback/src/libs/routers/connected/: muscles.rs  users.rs
back/dimdimmuscuback/src/mw/: mod.rs  mw_auth.rs
back/dimdimmuscuback/src/routers/: auth.rs  fallback.rs  login.rs  mod.rs  muscles.rs
back/dimdimmuscuback/tests/: auth_tests.rs  test_end_to_end.rs  test_helper.rs
back/libs/lib-auth/: Cargo.toml
back/libs/lib-auth/src/: config.rs
back/libs/lib-auth/src/pwd/: error.rs  mod.rs
back/libs/lib-auth/src/pwd/scheme/: error.rs  mod.rs  scheme_01.rs  scheme_02.rs
back/libs/lib-auth/src/token/: error.rs  mod.rs
config/: development.yaml  test.yaml
database/: CaloriesDB.tsx  CardioDB.tsx  CommonDB.tsx  CreateTable.tsx  ExercisesListDB.tsx  InfosDB.tsx  PersonalRecordDB.tsx  PictureEvolutionDB.tsx  SessionTrackerDB.tsx  WeightTrackerDB.tsx
dim-dim-muscu/: Cargo.toml  Dioxus.toml
dim_dim_muscu_back/: Cargo.toml
dimdimmuscu/: Cargo.toml
dimdimmuscu_contract/: Cargo.toml
hand_testing/: Cargo.toml
logic/: CaloriesTrackerLogic.tsx  CalucatorsLogic.tsx  CardioLogic.tsx  ExercisesListLogic.tsx  InfosLogic.tsx  PersonalRecordLogic.tsx  PictureEvolutionLogic.tsx  SessionTrackerLogic.tsx  WeightTrackerLogic.tsx
old_tmp/: .gitignore  README.md
screens/: CalculatorsScreen.tsx  CardioTrackerScreen.tsx  ExercisesList.tsx  HomeScreen.tsx  InfosScreen.tsx  PersonalRecordScreen.tsx  PictureEvolutionScreen.tsx  ScreenList.tsx  SessionTrackerScreen.tsx  WeightTracker.tsx
scripts/: db_test_no_shuttle.sh  deploy_to_shuttle.sh  dev.sh  loco_watch.sh  logs.sh
styles/: CalculatorsStyles.tsx  CaloStyles.tsx  CommonStyles.tsx  ExercisesListStyles.tsx  HomeScreenStyles.tsx  PersonalRecordStyles.tsx  PictureEvolutionStyles.tsx  WeightTrackerStyles.tsx
(+137 files in other folders)
