[package]
name = "dimdimmuscuback"
version = "0.1.0"
edition = "2021"

[dependencies]
# Axum
axum = "0.7.5"
axum-extra = { version = "0.9.3", features = ["typed-header"] }
# Shuttle
shuttle-axum = "0.46.0"
shuttle-runtime = "0.46.0"
shuttle-common = "0.46.0"
# Database
libsql = "0.4.0"
# Session
jsonwebtoken = "9.3.0"
# Async
tokio = "1.37.0"
# Json
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.120"
# Time
chrono = "0.4.38"
# Auth
uuid = { version = "1.10.0", features = ["v7"] }
argon2 = "0.5.3"
# Rand
rand = "0.8.5"
# Log
log = "0.4.22"
# Secrets
redact = { version = "0.1.10", features = ["serde"] }

[dev-dependencies]
axum-test = "15.3.0"
toml = "0.8.12"
